scroll fixed on mobile again

--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -5,7 +5,7 @@
   &__body {
     margin: 0;
 
-    &--wiht-menu {
+    &--with-menu {
       overflow: hidden;
     }
   }
